fixes issue that prevented search from display on mobile

--- a/styles/main.less
+++ b/styles/main.less
@@ -15,7 +15,7 @@
     color: #fff;
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: .9rem;
     display: inline-block;
   }
   a{
@@ -26,6 +26,9 @@
 @media screen and (min-width: @mobile-bp){
   .logo{
     padding: 0 10px;
+    h1{
+      font-size: 1.2rem;
+    }
   }
 }
 
@@ -45,8 +48,8 @@
 
 .header__search{
   float: right;
-  width: 40%;
-  min-width: 250px;
+  width: 35%;
+  min-width: 200px;
   .containing-block;
   input{
     width: 100%;
